// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots widgets/Loader circular 1`] = `
<div
  className="MuiGrid-container-117"
>
  <div
    className="MuiGrid-item-118 MuiGrid-grid-xs-12-157"
  >
    <div
      className="MuiGrid-container-117 MuiGrid-align-items-xs-center-125 MuiGrid-justify-xs-center-134 Loader-root-214"
    >
      <div
        className="MuiCircularProgress-root-216 MuiCircularProgress-colorPrimary-219 MuiCircularProgress-indeterminate-218"
        role="progressbar"
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-221"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-222 MuiCircularProgress-circleIndeterminate-224"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader custom 1`] = `
<div
  className="MuiGrid-container-225"
>
  <div
    className="MuiGrid-item-226 MuiGrid-grid-xs-12-265"
  >
    <div
      className="MuiGrid-container-225 MuiGrid-align-items-xs-center-233 MuiGrid-justify-xs-center-242 Loader-root-322"
    >
      <div
        className="MuiCircularProgress-root-324 MuiCircularProgress-colorPrimary-327 MuiCircularProgress-indeterminate-326"
        role="progressbar"
        style={
          Object {
            "color": "#9c27b0",
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-329"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-330 MuiCircularProgress-circleIndeterminate-332"
            cx={44}
            cy={44}
            fill="none"
            r={18.5}
            strokeWidth={7}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader linear 1`] = `
<div
  className="MuiGrid-container-1"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  >
    <div
      className="MuiGrid-container-1 MuiGrid-align-items-xs-center-9 MuiGrid-justify-xs-center-18 Loader-root-98"
    >
      <div
        className="MuiLinearProgress-root-100 MuiLinearProgress-colorPrimary-101 Loader-linear-99"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar-108 MuiLinearProgress-barColorPrimary-109 MuiLinearProgress-bar1Indeterminate-111"
          style={Object {}}
        />
        <div
          className="MuiLinearProgress-bar-108 MuiLinearProgress-barColorPrimary-109 MuiLinearProgress-bar2Indeterminate-114"
          style={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-333 MuiGrid-spacing-xs-24-357"
    >
      <div
        className="MuiDrawer-docked-430"
      >
        <div
          className="MuiPaper-root-441 MuiPaper-elevation0-443 MuiDrawer-paper-431 MuiDrawer-paperAnchorLeft-432 MuiDrawer-paperAnchorDockedLeft-436"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-478 MuiList-padding-479 SideMenu-root-469 Component-flexed-468"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-470"
            />
            <div
              className="MuiButtonBase-root-492 MuiListItem-root-482 MuiListItem-default-485 MuiListItem-gutters-489 SideMenu-listItemGutters-472 MuiListItem-button-490 SideMenu-listItem-471"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-496 MuiListItemIcon-root-495"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-503 SideMenu-listItemText-474"
              >
                <span
                  className="MuiTypography-root-509 MuiTypography-subheading-516 MuiListItemText-primary-506 SideMenu-listItemPrimary-473"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-533"
              />
            </div>
            <div
              className="MuiButtonBase-root-492 MuiListItem-root-482 MuiListItem-default-485 MuiListItem-gutters-489 SideMenu-listItemGutters-472 MuiListItem-button-490 SideMenu-listItem-471"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-496 MuiListItemIcon-root-495"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-503 SideMenu-listItemText-474"
              >
                <span
                  className="MuiTypography-root-509 MuiTypography-subheading-516 MuiListItemText-primary-506 SideMenu-listItemPrimary-473"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-533"
              />
            </div>
            <div
              className="MuiButtonBase-root-492 MuiListItem-root-482 MuiListItem-default-485 MuiListItem-gutters-489 SideMenu-listItemGutters-472 MuiListItem-button-490 SideMenu-listItem-471"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-496 MuiListItemIcon-root-495"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-503 SideMenu-listItemText-474"
              >
                <span
                  className="MuiTypography-root-509 MuiTypography-subheading-516 MuiListItemText-primary-506 SideMenu-listItemPrimary-473"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-496"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </g>
              </svg>
              <span
                className="MuiTouchRipple-root-533"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu mini selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-755 MuiGrid-spacing-xs-24-779"
    >
      <div
        className="MuiDrawer-docked-852"
      >
        <div
          className="MuiPaper-root-863 MuiPaper-elevation0-865 MuiDrawer-paper-853 MuiDrawer-paperAnchorLeft-854 MuiDrawer-paperAnchorDockedLeft-858"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-900 MuiList-padding-901 SideMenu-root-891 Component-flexed-890"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 80,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-892"
            />
            <div
              className="MuiButtonBase-root-914 MuiListItem-root-904 MuiListItem-default-907 MuiListItem-gutters-911 SideMenu-listItemGutters-894 MuiListItem-button-912 SideMenu-activeItem-899"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-918 MuiListItemIcon-root-917"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-925 SideMenu-listItemText-896 SideMenu-listItemHidden-897"
              >
                <span
                  className="MuiTypography-root-931 MuiTypography-subheading-938 MuiListItemText-primary-928 SideMenu-listItemPrimary-895"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-955"
              />
            </div>
            <div
              className="MuiButtonBase-root-914 MuiListItem-root-904 MuiListItem-default-907 MuiListItem-gutters-911 SideMenu-listItemGutters-894 MuiListItem-button-912 SideMenu-listItem-893"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-918 MuiListItemIcon-root-917"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-925 SideMenu-listItemText-896 SideMenu-listItemHidden-897"
              >
                <span
                  className="MuiTypography-root-931 MuiTypography-subheading-938 MuiListItemText-primary-928 SideMenu-listItemPrimary-895"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-955"
              />
            </div>
            <div
              className="MuiButtonBase-root-914 MuiListItem-root-904 MuiListItem-default-907 MuiListItem-gutters-911 SideMenu-listItemGutters-894 MuiListItem-button-912 SideMenu-listItem-893"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-918 MuiListItemIcon-root-917"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-925 SideMenu-listItemText-896 SideMenu-listItemHidden-897"
              >
                <span
                  className="MuiTypography-root-931 MuiTypography-subheading-938 MuiListItemText-primary-928 SideMenu-listItemPrimary-895"
                >
                  Theme
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-955"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-544 MuiGrid-spacing-xs-24-568"
    >
      <div
        className="MuiDrawer-docked-641"
      >
        <div
          className="MuiPaper-root-652 MuiPaper-elevation0-654 MuiDrawer-paper-642 MuiDrawer-paperAnchorLeft-643 MuiDrawer-paperAnchorDockedLeft-647"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-689 MuiList-padding-690 SideMenu-root-680 Component-flexed-679"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-681"
            />
            <div
              className="MuiButtonBase-root-703 MuiListItem-root-693 MuiListItem-default-696 MuiListItem-gutters-700 SideMenu-listItemGutters-683 MuiListItem-button-701 SideMenu-activeItem-688"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-707 MuiListItemIcon-root-706"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-714 SideMenu-listItemText-685"
              >
                <span
                  className="MuiTypography-root-720 MuiTypography-subheading-727 MuiListItemText-primary-717 SideMenu-listItemPrimary-684"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-744"
              />
            </div>
            <div
              className="MuiButtonBase-root-703 MuiListItem-root-693 MuiListItem-default-696 MuiListItem-gutters-700 SideMenu-listItemGutters-683 MuiListItem-button-701 SideMenu-listItem-682"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-707 MuiListItemIcon-root-706"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-714 SideMenu-listItemText-685"
              >
                <span
                  className="MuiTypography-root-720 MuiTypography-subheading-727 MuiListItemText-primary-717 SideMenu-listItemPrimary-684"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-744"
              />
            </div>
            <div
              className="MuiButtonBase-root-703 MuiListItem-root-693 MuiListItem-default-696 MuiListItem-gutters-700 SideMenu-listItemGutters-683 MuiListItem-button-701 SideMenu-listItem-682"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-707 MuiListItemIcon-root-706"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-714 SideMenu-listItemText-685"
              >
                <span
                  className="MuiTypography-root-720 MuiTypography-subheading-727 MuiListItemText-primary-717 SideMenu-listItemPrimary-684"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-707"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </g>
              </svg>
              <span
                className="MuiTouchRipple-root-744"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1427 MuiGrid-spacing-xs-24-1451"
    >
      <div
        className="MuiGrid-item-1428 MuiGrid-grid-xs-12-1467"
      >
        <div
          className="MuiPaper-root-1529 MuiPaper-elevation2-1533 MuiPaper-rounded-1530 Widget-root-1524"
        >
          <h2
            className="MuiTypography-root-1556 MuiTypography-title-1562 MuiTypography-colorInherit-1575 MuiTypography-gutterBottom-1573"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1580 MuiGrid-spacing-xs-24-1604"
    >
      <div
        className="MuiGrid-item-1581 MuiGrid-grid-xs-12-1620"
      >
        <div
          className="MuiPaper-root-1682 MuiPaper-elevation2-1686 MuiPaper-rounded-1683 Widget-root-1677 Widget-featured-1681"
        >
          <h2
            className="MuiTypography-root-1709 MuiTypography-title-1715 MuiTypography-colorInherit-1728 MuiTypography-gutterBottom-1726"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1733 MuiGrid-spacing-xs-24-1757"
    >
      <div
        className="MuiGrid-item-1734 MuiGrid-grid-xs-12-1773"
      >
        <div
          className="MuiGrid-container-1733 MuiGrid-spacing-xs-24-1757"
        >
          <div
            className="MuiGrid-item-1734 MuiGrid-grid-xs-6-1767"
          >
            <div
              className="MuiPaper-root-1837 MuiPaper-elevation2-1841 MuiPaper-rounded-1838 Widget-root-1832 Widget-border-1833 Widget-border-top-1834"
            >
              <h2
                className="MuiTypography-root-1864 MuiTypography-title-1870 MuiTypography-colorInherit-1883 MuiTypography-gutterBottom-1881"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1734 MuiGrid-grid-xs-6-1767"
          >
            <div
              className="MuiPaper-root-1837 MuiPaper-elevation2-1841 MuiPaper-rounded-1838 Widget-root-1832 Widget-border-1833 Widget-border-bottom-1835"
            >
              <h2
                className="MuiTypography-root-1864 MuiTypography-title-1870 MuiTypography-colorInherit-1883 MuiTypography-gutterBottom-1881"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1734 MuiGrid-grid-xs-6-1767"
          >
            <div
              className="MuiPaper-root-1837 MuiPaper-elevation2-1841 MuiPaper-rounded-1838 Widget-root-1832 Widget-border-1833 Component-customTopBorder-1830 Widget-border-top-1834"
            >
              <h2
                className="MuiTypography-root-1864 MuiTypography-title-1870 MuiTypography-colorInherit-1883 MuiTypography-gutterBottom-1881"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1734 MuiGrid-grid-xs-6-1767"
          >
            <div
              className="MuiPaper-root-1837 MuiPaper-elevation2-1841 MuiPaper-rounded-1838 Widget-root-1832 Widget-border-1833 Component-customBotomBorder-1831 Widget-border-bottom-1835"
            >
              <h2
                className="MuiTypography-root-1864 MuiTypography-title-1870 MuiTypography-colorInherit-1883 MuiTypography-gutterBottom-1881"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-966 MuiGrid-spacing-xs-24-990"
    >
      <div
        className="MuiGrid-item-967 MuiGrid-grid-xs-12-1006"
      >
        <div
          className="MuiPaper-root-1068 MuiPaper-elevation2-1072 MuiPaper-rounded-1069 Widget-root-1063"
        >
          <h2
            className="MuiTypography-root-1095 MuiTypography-title-1101 MuiTypography-colorInherit-1114 MuiTypography-gutterBottom-1112"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1119 MuiGrid-spacing-xs-24-1143"
    >
      <div
        className="MuiGrid-item-1120 MuiGrid-grid-xs-12-1159"
      >
        <div
          className="MuiPaper-root-1221 MuiPaper-elevation2-1225 MuiPaper-rounded-1222 Widget-root-1216 Widget-featured-1220"
        >
          <h2
            className="MuiTypography-root-1248 MuiTypography-title-1254 MuiTypography-colorInherit-1267 MuiTypography-gutterBottom-1265"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1272 MuiGrid-spacing-xs-24-1296"
    >
      <div
        className="MuiGrid-item-1273 MuiGrid-grid-xs-12-1312"
      >
        <div
          className="MuiGrid-container-1272 MuiGrid-spacing-xs-24-1296"
        >
          <div
            className="MuiGrid-item-1273 MuiGrid-grid-xs-6-1306"
          >
            <div
              className="MuiPaper-root-1376 MuiPaper-elevation2-1380 MuiPaper-rounded-1377 Widget-root-1371 Widget-border-1372 Widget-border-top-1373"
            >
              <h2
                className="MuiTypography-root-1403 MuiTypography-title-1409 MuiTypography-colorInherit-1422 MuiTypography-gutterBottom-1420"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1273 MuiGrid-grid-xs-6-1306"
          >
            <div
              className="MuiPaper-root-1376 MuiPaper-elevation2-1380 MuiPaper-rounded-1377 Widget-root-1371 Widget-border-1372 Widget-border-bottom-1374"
            >
              <h2
                className="MuiTypography-root-1403 MuiTypography-title-1409 MuiTypography-colorInherit-1422 MuiTypography-gutterBottom-1420"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1273 MuiGrid-grid-xs-6-1306"
          >
            <div
              className="MuiPaper-root-1376 MuiPaper-elevation2-1380 MuiPaper-rounded-1377 Widget-root-1371 Widget-border-1372 Component-customTopBorder-1369 Widget-border-top-1373"
            >
              <h2
                className="MuiTypography-root-1403 MuiTypography-title-1409 MuiTypography-colorInherit-1422 MuiTypography-gutterBottom-1420"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1273 MuiGrid-grid-xs-6-1306"
          >
            <div
              className="MuiPaper-root-1376 MuiPaper-elevation2-1380 MuiPaper-rounded-1377 Widget-root-1371 Widget-border-1372 Component-customBotomBorder-1370 Widget-border-bottom-1374"
            >
              <h2
                className="MuiTypography-root-1403 MuiTypography-title-1409 MuiTypography-colorInherit-1422 MuiTypography-gutterBottom-1420"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
